--- a/src/index.css
+++ b/src/index.css
@@ -51,15 +51,15 @@
   -moz-osx-font-smoothing: grayscale;
 
   --background: oklch(0.99 0.01 0.99);
-  --foreground: oklch(0.145 0 0);
-  --primary: oklch(0.205 0 0);
-  --primary-foreground: oklch(0.985 0 0);
+  --foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent: oklch(0.97 0 0);
-  --accent-foreground: #727d73;
+  --accent-foreground: #B8001F;
   --border: oklch(0.922 0 0);
-
+  
+  --accent: oklch(0.97 0 0);
+  --primary: oklch(0.205 0 0);
+  --primary-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.577 0.245 27.325);
   --destructive-foreground: oklch(0.577 0.245 27.325);
   --secondary: oklch(0.97 0 0);
@@ -93,14 +93,14 @@ body {
 .dark {
   --background: oklch(0.217 0 0);
   --foreground: oklch(0.985 0 0);
-  --primary: oklch(0.985 0 0);
-  --primary-foreground: oklch(0.205 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  --accent: oklch(0.269 0 0);
   --accent-foreground: #e8f9ff;
   --border: oklch(0.269 0 0);
-
+  
+  --accent: oklch(0.269 0 0);
+  --primary: oklch(0.985 0 0);
+  --primary-foreground: oklch(0.205 0 0);
   --destructive: oklch(0.396 0.141 25.723);
   --destructive-foreground: oklch(0.637 0.237 25.331);
   --secondary: oklch(0.269 0 0);
@@ -127,14 +127,14 @@ body {
 
   /* --background: #1e201e;
   --foreground: #ecdfcc;
-  --primary: #ecdfcc;
-  --primary-foreground: oklch(0.205 0 0);
   --muted: #3c3d37;
   --muted-foreground: #697565;
-  --accent: oklch(0.269 0 0);
   --accent-foreground: #697565;
   --border: oklch(0.269 0 0);
-
+  
+  --primary: #ecdfcc;
+  --primary-foreground: oklch(0.205 0 0);
+  --accent: oklch(0.269 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --destructive: oklch(0.396 0.141 25.723);
@@ -163,14 +163,14 @@ body {
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --color-primary: var(--primary);
-  --color-primary-foreground: var(--primary-foreground);
   --color-muted: var(--muted);
   --color-muted-foreground: var(--muted-foreground);
-  --color-accent: var(--accent);
   --color-accent-foreground: var(--accent-foreground);
   --color-border: var(--border);
   
+  --color-accent: var(--accent);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
   --color-destructive: var(--destructive);
   --color-destructive-foreground: var(--destructive-foreground);
   --color-secondary: var(--secondary);
