--- a/src/index.css
+++ b/src/index.css
@@ -56,7 +56,7 @@
   --muted-foreground: oklch(0.556 0 0);
   --accent-foreground: #B8001F;
   --border: oklch(0.922 0 0);
-  
+
   --accent: oklch(0.97 0 0);
   --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(0.985 0 0);
@@ -95,9 +95,9 @@ body {
   --foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  --accent-foreground: #B8001F;
+  --accent-foreground: #b8001f;
   --border: oklch(0.269 0 0);
-  
+
   --accent: oklch(0.269 0 0);
   --primary: oklch(0.985 0 0);
   --primary-foreground: oklch(0.205 0 0);
@@ -167,7 +167,7 @@ body {
   --color-muted-foreground: var(--muted-foreground);
   --color-accent-foreground: var(--accent-foreground);
   --color-border: var(--border);
-  
+
   --color-accent: var(--accent);
   --color-primary: var(--primary);
   --color-primary-foreground: var(--primary-foreground);
