--- a/src/index.css
+++ b/src/index.css
@@ -54,7 +54,7 @@
   --foreground: oklch(0.205 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
-  --accent-foreground: #B8001F;
+  --accent-foreground: #E52020;
   --border: oklch(0.922 0 0);
 
   --accent: oklch(0.97 0 0);
@@ -95,7 +95,7 @@ body {
   --foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
-  --accent-foreground: #b8001f;
+  --accent-foreground: #FFD95F;
   --border: oklch(0.269 0 0);
 
   --accent: oklch(0.269 0 0);
